# libiso226

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  gen_data.py  gost.2009.data  iso226.c  iso226.h  iso226_data.h  phon2spl.c  spl2phon.c
cmake/: Doxygen.cmake  FindCSound6.cmake  FindPureData.cmake  cmake_uninstall.cmake.in
tests/: CMakeLists.txt  equal_loudness.plot  plot.sh  test_main.cpp
tests/regression/: CMakeLists.txt  gen_regression_data.sh  sample_phon2spl.txt  test_regression.sh  test_regresssion.sh
